--- a/Resources/Bacon Fansite Start Here/CSS - Bacon Fansite/css/styles.css
+++ b/Resources/Bacon Fansite Start Here/CSS - Bacon Fansite/css/styles.css
@@ -1,8 +1,29 @@
+/********************************************TAG SELECTORS**********************************/
+
 h1{
     color: red;
     font-size: 200px;
 }
 
-img{
-    background-color: red;
+img:hover{    
+    background-color: gold;
 } 
+
+
+/********************************************CLASS SELECTORS**********************************/
+
+.becon{
+    background-color: green;
+}
+.broccoli{
+    background-color: red;
+}
+
+.circular{
+    border-radius: 100%;
+}
+/********************************************ID SELECTORS**********************************/
+
+#heading{
+    color: blue;
+}
